All sector weights by FSC and FAO Food category

--- a/Rmd/cost_analysis_v2.Rmd
+++ b/Rmd/cost_analysis_v2.Rmd
@@ -137,7 +137,7 @@ This chart shows impact reduction when waste is reduced by 50% in a single stage
 
 \newpage
 
-# Determinining the optimal allocation of funds to reduce food loss and waste to minimize environmental impacts
+# Determining the optimal allocation of funds to reduce food loss and waste to minimize environmental impacts
 
 ## Cost curves for each stage
 
