Full reweighting of all fsc sectors to include sugar and drinks

--- a/Rmd/cost_analysis_v2.Rmd
+++ b/Rmd/cost_analysis_v2.Rmd
@@ -77,7 +77,9 @@ As mentioned above, this may not correspond directly to the loss stages in the F
 
 In order to determine the baseline FLW rate for each sector, it is necessary to determine what food commodity groups comprise it. 
 I roughly estimated this for this preliminary work by assuming that each FSC sector is composed in equal proportions of one or more food commodity groups. 
-This could be improved by doing better weightings within sectors by food type, but this would require a lot of effort and not necessarily make the results more accurate if the weightings are not correct.
+For agricultural sectors, there was typically only a single FAO category of its output. Some produce multiple outputs so I used the number of employees for the subsectors from QCEW to assign proportions to the outputs.
+For processing sectors, if the sector's output is still assignable to a single FAO category, such as the processed dairy product and meat sectors, I assigned the entire output to that category. If the processed output is more of a composite food with a lot of ingredients, such as the frozen food sector, I assigned the output proportionally to the same categories as the proportions of inputs.
+For the foodservice and institutional sectors, I also assumed the output is proportionally in the same categories as the inputs they receive from the food production and processing sectors.
 
 ## 3. Computing changes in demand associated with reductions in FLW, and altering model structure to reflect those changes
 
@@ -198,7 +200,7 @@ The optimal solution for different values of $x_{total}$ is different depending 
 This is documentation of the scripts on the [FWE GitHub repository](https://github.com/qdread/fwe) that are needed to do this analysis. The underlying data is on the SESYNC server at `/nfs/fwe-data/`, and some of the lookup tables are currently on my own space on the SESYNC server at `/nfs/qread-data/`. Eventually everything will be moved to the FWE space.
 
 * `create_2012_bea.r`: This script maps the 2007 sector codes from the BEA input-output benchmark table to the 2012 codes and retotals the make and use tables for 2012. In other words it creates 2012 make-use tables with 2007's sectoral classification. This calls some functions in `reaggregate_mat.r`.
-* `partial_sector_proportions.r`, `susb_by_foodcategory.r`, `read_qcew.r`: These scripts find the proportion of demand for sectors that are related to the food supply chain, for those sectors that are only partially FSC. There are different data sources used for different sectors.
+* `partial_sector_proportions.r`, `susb_by_foodcategory.r`, `qcew_by_foodcategory.r`: These scripts find the proportion of demand for sectors that are related to the food supply chain, for those sectors that are only partially FSC. There are different data sources used for different sectors.
 * `load_scenario_data.r`: This script loads the baseline food waste rate data (currently sourced from FAO) and a table that contains the data for each of the BEA/NAICS sectors including which FSC stage they are classified in, proportion of food outputs for sectors that are only partially in the FSC, and what FAO categories each sector maps to. Later this should include which LAFA categories each sector maps to. This script also sources the R script to build the USEEIO model with modified intermediate and final demand, `USEEIO2012_buildfunction.R`, and the Python script that evaluates the model `eeio_lcia.py`, which is called from within R.  It also loads the formatted make and use tables created in the previous script. Finally, it defines a function which accepts a vector of waste reduction values across all sectors as input, modifies the make and use tables accordingly, builds the USEEIO model, runs it also with modified final demand, and returns the LCIA impact values as output.
 * `sixstage_scenario.r`: This script runs the model for all 25% waste reduction increments, and it runs the nonlinear optimization using the R package `Rsolnp` using the fake cost curves shown above.
 * `sixstage_figs.r`: This script includes code to make all the figures shown here.
